--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,10 @@ version: '3'
 
 services:
   web:
-    build: ./receipt_processor/Dockerfile
+    build:
+        context: ./receipt_processor
+        dockerfile: Dockerfile
     ports:
       - "8080:8080"
     environment:
       - .env
-  redis:
-    image: "redis:alpine"
