--- a/receipt_processor/requirements.txt
+++ b/receipt_processor/requirements.txt
@@ -1,6 +1,8 @@
-uvicorn
-fastapi
-pydantic
-sqlalchemy
-aiosqlite
-pytest
+uvicorn==0.23.2
+fastapi==0.103.1
+pydantic==2.3.0
+SQLAlchemy==2.0.20
+aiosqlite==0.19.0
+pytest==7.4.2
+httpx==0.25.0
+pytest-asyncio==0.21.1
