--- a/receipt_processor/Dockerfile
+++ b/receipt_processor/Dockerfile
@@ -15,4 +15,4 @@ RUN pip3 install --upgrade pip && \
     pip3 install --no-cache-dir -r /source/receipt_processor/requirements.txt
 
 
-CMD [ "uvicorn", "receipt_processor.api.app:app", "--host", "0.0.0.0", "--port", "8080", "--reload" ]
+CMD [ "uvicorn", "receipt_processor.api.app:app", "--host", "0.0.0.0", "--port", "8080"]
